--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,12 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-android-extensions'
+    //Kapt is the Kotlin Annotation Processing Tool
+    id 'kotlin-kapt'
+    id 'androidx.navigation.safeargs'
+    id 'com.google.secrets_gradle_plugin' version '0.5'
+    id "dagger.hilt.android.plugin"
 }
 
 android {
@@ -29,15 +35,77 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    kapt {
+        correctErrorTypes true
+    }
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
-
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'com.google.android.material:material:1.6.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //desugering
+    coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:1.1.5")
+
+    //hilt dagger
+    implementation "com.google.dagger:hilt-android:$version_hilt"
+    kapt "com.google.dagger:hilt-android-compiler:$version_hilt"
+
+    //hilt viewModel
+    implementation "androidx.hilt:hilt-navigation-fragment:1.0.0"
+
+    //unit test
+    testImplementation "io.mockk:mockk:1.12.0"
+    testImplementation 'com.google.truth:truth:1.1.3'
+
+    //snack bar and tow way of data binding
+    implementation "com.google.android.material:material:1.6.0"
+
+    //navigation
+    implementation "android.arch.navigation:navigation-fragment-ktx:$version_navigation"
+    implementation "android.arch.navigation:navigation-ui-ktx:$version_navigation"
+
+    //lifcycle
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+
+    //moshie
+    implementation "com.squareup.moshi:moshi:$version_moshi"
+    implementation "com.squareup.moshi:moshi-kotlin:$version_moshi"
+
+    //retrofit and converter
+    implementation "com.squareup.retrofit2:retrofit:$version_retrofit"
+    implementation "com.squareup.retrofit2:converter-scalars:$version_retrofit"
+    implementation "com.squareup.retrofit2:converter-moshi:$version_retrofit"
+
+    // image
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
+    //coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$version_kotlin_coroutines"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$version_kotlin_coroutines"
+    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:$version_retrofit_coroutines_adapter"
+
+    //recyclerview
+    //noinspection GradleDependency
+    implementation "androidx.recyclerview:recyclerview:$version_recyclerview"
+
+    //test tools
+    //test
+    implementation "androidx.test:core:1.4.0"
+    testImplementation "junit:junit:4.13.2"
+    testImplementation "org.hamcrest:hamcrest-all:1.3"
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation "org.robolectric:robolectric:4.5.1"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.2.1"
+    testImplementation "com.google.truth:truth:1.1.3"
+    testImplementation "org.mockito:mockito-core:2.23.4"
 }
