--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,26 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext {
+        version_glide ="4.8.0"
+        kotlin_version = "1.5.31"
+        version_navigation = '1.0.0'
+        version_kotlin_coroutines = "1.5.2"
+        version_lifecycle = "2.2.0"
+        version_moshi = "1.9.3"
+        version_retrofit = "2.9.0"
+        version_retrofit_coroutines_adapter = "0.9.2"
+        version_recyclerview = "1.2.0-alpha05"
+        version_hilt = "2.38.1"
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.0.4'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.4.2"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$version_hilt"
+    }
     repositories {
         google()
         mavenCentral()
-    }
-    dependencies {
-        classpath "com.android.tools.build:gradle:7.0.3"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
